--- a/EgymApp/EgymApp/Base.lproj/Main.storyboard
+++ b/EgymApp/EgymApp/Base.lproj/Main.storyboard
@@ -30,19 +30,19 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Eb-zo-YRK">
                                                     <rect key="frame" x="20" y="11" width="98" height="98"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="98" id="a4U-iD-CQA"/>
+                                                        <constraint firstAttribute="height" priority="750" constant="98" id="PUE-ZS-rFi"/>
                                                         <constraint firstAttribute="width" constant="98" id="xur-3x-3xN"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVc-e3-yrP">
-                                                    <rect key="frame" x="138" y="88" width="256" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="138" y="92" width="256" height="17"/>
+                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cHl-bg-EoL">
-                                                    <rect key="frame" x="138" y="11" width="256" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="138" y="11" width="256" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -99,35 +99,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGA-HI-tuM">
-                                <rect key="frame" x="0.0" y="44" width="414" height="250"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="brg-6L-6e4"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGA-HI-tuM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="448"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2A-Yr-SDO">
-                                <rect key="frame" x="20" y="304" width="374" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20" y="502" width="374" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ysA-SR-f0k">
-                                <rect key="frame" x="20" y="395.5" width="374" height="31"/>
+                                <rect key="frame" x="9" y="588" width="72.5" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="IPi-8a-XC7"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="See more"/>
+                                <buttonConfiguration key="configuration" style="plain" title="See more">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="10"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="seemoreButtonAction:" destination="CFB-UX-1OW" eventType="touchUpInside" id="4cn-39-PLG"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeP-RK-AGq">
-                                <rect key="frame" x="20" y="365" width="374" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20" y="561" width="374" height="17"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmN-Kp-L7z">
-                                <rect key="frame" x="20" y="334.5" width="374" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="20" y="531.5" width="374" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -137,10 +139,10 @@
                         <constraints>
                             <constraint firstItem="mKy-Qh-iCZ" firstAttribute="trailing" secondItem="d2A-Yr-SDO" secondAttribute="trailing" constant="20" id="40I-wn-g2I"/>
                             <constraint firstItem="HeP-RK-AGq" firstAttribute="leading" secondItem="mKy-Qh-iCZ" secondAttribute="leading" constant="20" id="9rp-Wx-x4p"/>
-                            <constraint firstItem="ysA-SR-f0k" firstAttribute="leading" secondItem="mKy-Qh-iCZ" secondAttribute="leading" constant="20" id="E6n-Xv-4FV"/>
+                            <constraint firstItem="cGA-HI-tuM" firstAttribute="height" secondItem="EOV-PI-v9d" secondAttribute="height" multiplier="1:2" id="CGk-rV-DNu"/>
+                            <constraint firstItem="ysA-SR-f0k" firstAttribute="leading" secondItem="mKy-Qh-iCZ" secondAttribute="leading" constant="9" id="E6n-Xv-4FV"/>
                             <constraint firstItem="d2A-Yr-SDO" firstAttribute="top" secondItem="cGA-HI-tuM" secondAttribute="bottom" constant="10" id="ERx-F8-Vsx"/>
                             <constraint firstItem="tmN-Kp-L7z" firstAttribute="top" secondItem="d2A-Yr-SDO" secondAttribute="bottom" constant="10" id="JI9-fU-heS"/>
-                            <constraint firstItem="mKy-Qh-iCZ" firstAttribute="trailing" secondItem="ysA-SR-f0k" secondAttribute="trailing" constant="20" id="MKM-q0-2ge"/>
                             <constraint firstItem="mKy-Qh-iCZ" firstAttribute="trailing" secondItem="HeP-RK-AGq" secondAttribute="trailing" constant="20" id="N4H-3i-ePH"/>
                             <constraint firstItem="tmN-Kp-L7z" firstAttribute="leading" secondItem="mKy-Qh-iCZ" secondAttribute="leading" constant="20" id="NVN-92-5Uk"/>
                             <constraint firstItem="mKy-Qh-iCZ" firstAttribute="trailing" secondItem="tmN-Kp-L7z" secondAttribute="trailing" constant="20" id="RIp-7z-qgh"/>
@@ -148,6 +150,7 @@
                             <constraint firstItem="cGA-HI-tuM" firstAttribute="leading" secondItem="mKy-Qh-iCZ" secondAttribute="leading" id="bJt-gh-xvL"/>
                             <constraint firstItem="HeP-RK-AGq" firstAttribute="top" secondItem="tmN-Kp-L7z" secondAttribute="bottom" constant="10" id="kcR-WS-Txp"/>
                             <constraint firstItem="mKy-Qh-iCZ" firstAttribute="trailing" secondItem="cGA-HI-tuM" secondAttribute="trailing" id="ns9-qz-oyM"/>
+                            <constraint firstItem="mKy-Qh-iCZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ysA-SR-f0k" secondAttribute="trailing" symbolic="YES" id="vJq-94-TGs"/>
                             <constraint firstItem="ysA-SR-f0k" firstAttribute="top" secondItem="HeP-RK-AGq" secondAttribute="bottom" constant="10" id="z3K-iT-kv6"/>
                             <constraint firstItem="d2A-Yr-SDO" firstAttribute="leading" secondItem="mKy-Qh-iCZ" secondAttribute="leading" constant="20" id="zlG-yf-fUH"/>
                         </constraints>
